extends Node2D

@onready var button_click = $button_click
@onready var screen_Shoot = $Background/Screen_Shoot
@onready var player_name = $"VBoxContainer/Player Name/name"
@onready var player_location = $"VBoxContainer/Player Location/Location"
@onready var player_coordinate = $VBoxContainer/Player_Coordinate/Coordinate

# const saveslot1 = preload("")
# const saveslot2 = preload("")
# const saveslot3 = preload("")
# const saveslot4 = preload("")

func _on_slot_1_mouse_entered():
	pass # Replace with function body.

	# save_file.load_data()
	# player_name.text=save_file.player_name
	# player_location.text = save_file.player_biome_location
	# player_coordinate.text = save_file.player_position
	

func _on_slot_1_mouse_exited():
	pass # Replace with function body.
	
	


func _on_slot_2_mouse_entered():
	pass # Replace with function body.


func _on_slot_2_mouse_exited():
	pass # Replace with function body.


func _on_slot_3_mouse_entered():
	pass # Replace with function body.


func _on_slot_3_mouse_exited():
	pass # Replace with function body.


func _on_slot_4_mouse_entered():
	pass # Replace with function body.


func _on_slot_4_mouse_exited():
	pass # Replace with function body.
